--- a/index.html
+++ b/index.html
@@ -1,227 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Resume/CV Design</title>
-	<link rel="stylesheet" href="styles.css">
-	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+  <meta charset="UTF-8">
+  <title>Dhruva Bhattacharya - Resume</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
 
-<div class="resume">
-   <div class="resume_left">
-     <div class="resume_profile">
-       <img src="me.png" alt="profile_pic">
-     </div>
-     <div class="resume_content">
-       <div class="resume_item resume_info">
-         <div class="title">
-           <p class="bold">Dhruva Bhattacharya</p>
-           <p class="regular">Student and AI enthusiast and 
-           Competitive Programmer</p>
-         </div>
-         <ul>
-           <li>
-             <div class="icon">
-               <i class="fas fa-map-signs"></i>
-             </div>
-             <div class="data">
-               Diwan Mane Gaon , Khamariya , Jabalpur , (M.P.) <br /> INDIA
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fas fa-mobile-alt"></i>
-             </div>
-             <div class="data">
-               +91 7987310528(Personal)
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fas fa-envelope"></i>
-             </div>
-             <div class="data">
-              dhruvabhattacharya130102@gmail.com
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-weebly"></i>
-             </div>
-             <div class="data">
-               http://dhruvabhattacharya130102.xyz/
-             </div>
-           </li>
-         </ul>
-       </div>
-       <div class="resume_item resume_skills">
-         <div class="title">
-           <p class="bold">skill's</p>
-         </div>
-         <ul>
-           <li>
-             <div class="skill_name">
-               HTML
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per">60%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               CSS
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per">40%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               JavaScript
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per">40%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               C programming Language
-             </div>
-             <div class="skill_progress">
-               <span style="width: 50%;"></span>
-             </div>
-             <div class="skill_per">50%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               C++
-             </div>
-             <div class="skill_progress">
-               <span style="width: 60%;"></span>
-             </div>
-             <div class="skill_per">40%</div>
-           </li>
-         </ul>
-       </div>
-       <div class="resume_item resume_social">
-         <div class="title">
-           <p class="bold">Social</p>
-         </div>
-         <ul>
-           <li>
-             <div class="icon">
-               <i class="fab fa-facebook-square"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Facebook</p>
-               <p>https://www.facebook.com/dhruva130102</p>
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-twitter-square"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Twitter</p>
-               <p>https://twitter.com/DhruvaBhattach2</p>
-             </div>
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-youtube"></i>
-               </div>
-                <div class="data">
-               <p class="semi-bold">        YouTube</p>
-               <p>          https://youtube.com/channel/
-               UCx4o0mGSyBHIzsQMG3zHj7Q</p>
-             </div> 
-           </li>
-           <li>
-             <div class="icon">
-               <i class="fab fa-linkedin"></i>
-             </div>
-             <div class="data">
-               <p class="semi-bold">Linkedin</p>
-               <p>https://www.linkedin.com/in/dhruva-bhattacharya-14843915b</p>
-             </div>
-           </li>
-         </ul>
-       </div>
-     </div>
+<div class="resume-container">
+
+  <!-- Print Button -->
+  <div class="print-btn">
+    <button onclick="window.print()"><i class="fas fa-print"></i> Print Resume</button>
   </div>
-  <div class="resume_right">
-    <div class="resume_item resume_about">
-        <div class="title">
-           <p class="bold">About us</p>
-         </div>
-        <p>Student at Gyan Ganga Institute of Technology (2020-24) |trainee in programming Language| beginner in CP | Enthusiast AI</p>
+
+  <!-- Header Section -->
+  <header class="resume-header">
+    <div class="profile-pic">
+      <img src="me.png" alt="Profile Picture">
     </div>
-    <div class="resume_item resume_work">
-        <div class="title">
-           <p class="bold">Work Experience</p>
-         </div>
-        <ul>
-            <li>
-                <div class="date">----</div> 
-                <div class="info">
-                     <p class="semi-bold">No prior experience</p> 
-                  <p></p>
-                </div>
-            </li>
-            <li>
-              <div class="date">----</div>
-              <div class="info">
-                     <p class="semi-bold">No prior experience</p> 
-                  <p></p>
-                </div>
-            </li>
-            <li>
-              <div class="date">----</div>
-              <div class="info">
-                     <p class="semi-bold">No prior experience</p> 
-                  <p>No prior experience</p>
-                </div>
-            </li>
-        </ul>
+    <div class="header-info">
+      <h1>Dhruva Bhattacharya</h1>
+      <p class="tagline">Assistant System Engineer | AI Enthusiast | Full-Stack Developer</p>
+      <div class="contact-info">
+        <p><i class="fas fa-envelope"></i> dhruvabhattacharya130102@gmail.com</p>
+        <p><i class="fas fa-phone"></i> +91 7987310528</p>
+        <p><i class="fas fa-map-marker-alt"></i> Indore, Madhya Pradesh, India</p>
+        <p><i class="fas fa-globe"></i> <a href="http://dhruvabhattacharya130102.xyz/">Portfolio</a></p>
+      </div>
     </div>
-    <div class="resume_item resume_education">
-      <div class="title">
-           <p class="bold">Education</p>
-         </div>
-      <ul>
-            <li>
-                <div class="date">2021 - 2024</div> 
-                <div class="info">
-                     <p class="semi-bold">Student and AI Enthusiast (Gyan Ganga Institute of Technology and Science)</p> 
-                  <p>Doing my bachelor in Technology from Gyan Ganga Institute of Technology and Sciences in Computer Science Engineering </p>
-                </div>
-            </li>
-            <li>
-              <div class="date">2009 - 2019</div>
-              <div class="info">
-                     <p class="semi-bold">St. Xavier's High School ShantiNagar Jabalpur</p> 
-                  <p>I secured 75 percent in my 12 standard and I am highly passionate in field of data science, machine learning and Artificial Intelligence</p>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <div class="resume_item resume_hobby">
-      <div class="title">
-           <p class="bold">Hobby</p>
-           <p>Reading, Painting, Singing, Programming</p>
-         </div>
-       <ul>
-         <li><i class="fas fa-book"></i></li>
-         <li><i class="fas fa-gamepad"></i></li>
-         <li><i class="fas fa-music"></i></li>
-         <li><i class="fab fa-pagelines"></i></li>
+  </header>
+
+  <!-- Resume Body -->
+  <main class="resume-body">
+    <!-- Left Column -->
+    <section class="left-column">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li><span>HTML</span><div class="bar"><div style="width:60%"></div></div></li>
+        <li><span>CSS</span><div class="bar"><div style="width:40%"></div></div></li>
+        <li><span>JavaScript</span><div class="bar"><div style="width:40%"></div></div></li>
+        <li><span>C Programming</span><div class="bar"><div style="width:50%"></div></div></li>
+        <li><span>C++</span><div class="bar"><div style="width:40%"></div></div></li>
       </ul>
-    </div>
-  </div>
+
+      <h2>Social</h2>
+      <ul class="social-list">
+        <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/dhruva-bhattacharya">LinkedIn</a></li>
+        <li><i class="fab fa-github"></i> <a href="https://dhruvabhattacharya.github.io/">GitHub</a></li>
+        <li><i class="fab fa-twitter"></i> <a href="https://twitter.com/DhruvaBhattach2">Twitter</a></li>
+        <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/channel/UCx4o0mGSyBHIzsQMG3zHj7Q">YouTube</a></li>
+        <li><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/dhruva130102">Facebook</a></li>
+      </ul>
+    </section>
+
+    <!-- Right Column -->
+    <section class="right-column">
+      <h2>About Me</h2>
+      <p>Motivated Computer Science graduate and Web Developer with experience in backend and full-stack development. Skilled in designing scalable APIs, frontend integration, and cloud-native applications. Enthusiast in AI & CP.</p>
+
+      <h2>Work Experience</h2>
+      <div class="experience">
+        <h3>TCS - Assistant Systems Engineer <span>(2024 - Present)</span></h3>
+        <ul>
+          <li>Designed and optimized RESTful APIs for TCS HOBS, reducing latency by 6.6x using Redis & MongoDB.</li>
+          <li>Collaborated with architects on modular service design for scalability.</li>
+          <li>Mentored interns and peers on database optimization & caching strategies.</li>
+        </ul>
+      </div>
+
+      <h2>Education</h2>
+      <div class="education">
+        <h3>B.Tech - Computer Science & AI <span>(2020 - 2024)</span></h3>
+        <p>Gyan Ganga Institute of Technology & Sciences, Jabalpur | GPA: 8.28/10</p>
+        <h3>St. Xavier's High School <span>(2009 - 2019)</span></h3>
+        <p>Secured 75% in 12th standard. Passionate in data science & AI.</p>
+      </div>
+
+      <h2>Hobbies</h2>
+      <p>Reading, Painting, Singing, Programming</p>
+    </section>
+  </main>
 </div>
 
 </body>
