--- a/index.html
+++ b/index.html
@@ -2,87 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dhruva Bhattacharya - Resume</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
-  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
-
-<div class="resume-container">
-
   <!-- Print Button -->
   <div class="print-btn">
-    <button onclick="window.print()"><i class="fas fa-print"></i> Print Resume</button>
+    <button onclick="window.print()">
+      <i class="fas fa-print"></i>
+      <span>Print Resume</span>
+    </button>
   </div>
 
-  <!-- Header Section -->
-  <header class="resume-header">
-    <div class="profile-pic">
-      <img src="me.png" alt="Profile Picture">
+  <div class="container">
+    <!-- Header Section -->
+    <header class="header">
+      <div class="header-content">
+        <div class="profile-pic">
+          <img src="me.png" alt="Dhruva Bhattacharya">
+        </div>
+        <div class="header-info">
+          <h1>Dhruva Bhattacharya</h1>
+          <p class="tagline">Assistant System Engineer | AI Enthusiast | Full-Stack Developer</p>
+          <div class="contact-info">
+            <div class="contact-item">
+              <i class="fas fa-envelope"></i>
+              <span>dhruvabhattacharya130102@gmail.com</span>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <span>+91 7987310528</span>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Indore, Madhya Pradesh</span>
+            </div>
+            <div class="contact-item">
+              <i class="fas fa-globe"></i>
+              <a href="https://logiclabs-ed.netlify.app/" target="_blank">Portfolio</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Main Content -->
+    <div class="main-content">
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        <!-- Skills Section -->
+        <section class="section">
+          <h2><i class="fas fa-code"></i> Skills</h2>
+          <ul class="skills-list">
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fab fa-html5"></i>
+                <span>HTML</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fab fa-css3-alt"></i>
+                <span>CSS</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fab fa-js"></i>
+                <span>JavaScript</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fas fa-code"></i>
+                <span>C Programming</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fas fa-code"></i>
+                <span>C++</span>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+        <!-- Social Links Section -->
+        <section class="section">
+          <h2><i class="fas fa-share-alt"></i> Social</h2>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="https://www.linkedin.com/in/dhruva-bhattacharya" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                <span>LinkedIn</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://dhruvabhattacharya.github.io/" target="_blank">
+                <i class="fab fa-github"></i>
+                <span>GitHub</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://twitter.com/DhruvaBhattach2" target="_blank">
+                <i class="fab fa-twitter"></i>
+                <span>Twitter</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://youtube.com/channel/UCx4o0mGSyBHIzsQMG3zHj7Q" target="_blank">
+                <i class="fab fa-youtube"></i>
+                <span>YouTube</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="https://www.facebook.com/dhruva130102" target="_blank">
+                <i class="fab fa-facebook"></i>
+                <span>Facebook</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <!-- Hobbies Section -->
+        <section class="section">
+          <h2><i class="fas fa-heart"></i> Hobbies</h2>
+          <div class="hobbies">
+            <span class="hobby-tag"><i class="fas fa-book"></i> Reading</span>
+            <span class="hobby-tag"><i class="fas fa-palette"></i> Painting</span>
+            <span class="hobby-tag"><i class="fas fa-music"></i> Singing</span>
+            <span class="hobby-tag"><i class="fas fa-laptop-code"></i> Programming</span>
+          </div>
+        </section>
+      </aside>
+
+      <!-- Main Column -->
+      <main class="main-column">
+        <!-- About Section -->
+        <section class="content-section">
+          <h2><i class="fas fa-user"></i> About Me</h2>
+          <p class="about-text">
+            Motivated Computer Science graduate and Web Developer with experience in backend and full-stack development. 
+            Skilled in designing scalable APIs, frontend integration, and cloud-native applications. Enthusiast in AI & Competitive Programming.
+          </p>
+        </section>
+
+        <!-- Experience Section -->
+        <section class="content-section">
+          <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <div class="timeline-header">
+                  <h3>Assistant Systems Engineer</h3>
+                  <span class="timeline-date">2024 - Present</span>
+                </div>
+                <p class="timeline-company">Tata Consultancy Services (TCS)</p>
+                <ul class="timeline-list">
+                  <li>Designed and optimized RESTful APIs for TCS HOBS, reducing latency by 6.6x using Redis & MongoDB</li>
+                  <li>Collaborated with architects on modular service design for scalability</li>
+                  <li>Mentored interns and peers on database optimization & caching strategies</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Education Section -->
+        <section class="content-section">
+          <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <div class="timeline-header">
+                  <h3>B.Tech - Computer Science & AI</h3>
+                  <span class="timeline-date">2020 - 2024</span>
+                </div>
+                <p class="timeline-company">Gyan Ganga Institute of Technology & Sciences, Jabalpur</p>
+                <p class="timeline-detail">GPA: 8.28/10</p>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-content">
+                <div class="timeline-header">
+                  <h3>Higher Secondary Education</h3>
+                  <span class="timeline-date">2009 - 2019</span>
+                </div>
+                <p class="timeline-company">St. Xavier's High School</p>
+                <p class="timeline-detail">Secured 75% in 12th standard. Passionate in data science & AI</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
-    <div class="header-info">
-      <h1>Dhruva Bhattacharya</h1>
-      <p class="tagline">Assistant System Engineer | AI Enthusiast | Full-Stack Developer</p>
-      <div class="contact-info">
-        <p><i class="fas fa-envelope"></i> dhruvabhattacharya130102@gmail.com</p>
-        <p><i class="fas fa-phone"></i> +91 7987310528</p>
-        <p><i class="fas fa-map-marker-alt"></i> Indore, Madhya Pradesh, India</p>
-        <p><i class="fas fa-globe"></i> <a href="http://dhruvabhattacharya130102.xyz/">Portfolio</a></p>
-      </div>
-    </div>
-  </header>
-
-  <!-- Resume Body -->
-  <main class="resume-body">
-    <!-- Left Column -->
-    <section class="left-column">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li><span>HTML</span><div class="bar"><div style="width:60%"></div></div></li>
-        <li><span>CSS</span><div class="bar"><div style="width:40%"></div></div></li>
-        <li><span>JavaScript</span><div class="bar"><div style="width:40%"></div></div></li>
-        <li><span>C Programming</span><div class="bar"><div style="width:50%"></div></div></li>
-        <li><span>C++</span><div class="bar"><div style="width:40%"></div></div></li>
-      </ul>
-
-      <h2>Social</h2>
-      <ul class="social-list">
-        <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/dhruva-bhattacharya">LinkedIn</a></li>
-        <li><i class="fab fa-github"></i> <a href="https://dhruvabhattacharya.github.io/">GitHub</a></li>
-        <li><i class="fab fa-twitter"></i> <a href="https://twitter.com/DhruvaBhattach2">Twitter</a></li>
-        <li><i class="fab fa-youtube"></i> <a href="https://youtube.com/channel/UCx4o0mGSyBHIzsQMG3zHj7Q">YouTube</a></li>
-        <li><i class="fab fa-facebook"></i> <a href="https://www.facebook.com/dhruva130102">Facebook</a></li>
-      </ul>
-    </section>
-
-    <!-- Right Column -->
-    <section class="right-column">
-      <h2>About Me</h2>
-      <p>Motivated Computer Science graduate and Web Developer with experience in backend and full-stack development. Skilled in designing scalable APIs, frontend integration, and cloud-native applications. Enthusiast in AI & CP.</p>
-
-      <h2>Work Experience</h2>
-      <div class="experience">
-        <h3>TCS - Assistant Systems Engineer <span>(2024 - Present)</span></h3>
-        <ul>
-          <li>Designed and optimized RESTful APIs for TCS HOBS, reducing latency by 6.6x using Redis & MongoDB.</li>
-          <li>Collaborated with architects on modular service design for scalability.</li>
-          <li>Mentored interns and peers on database optimization & caching strategies.</li>
-        </ul>
-      </div>
-
-      <h2>Education</h2>
-      <div class="education">
-        <h3>B.Tech - Computer Science & AI <span>(2020 - 2024)</span></h3>
-        <p>Gyan Ganga Institute of Technology & Sciences, Jabalpur | GPA: 8.28/10</p>
-        <h3>St. Xavier's High School <span>(2009 - 2019)</span></h3>
-        <p>Secured 75% in 12th standard. Passionate in data science & AI.</p>
-      </div>
-
-      <h2>Hobbies</h2>
-      <p>Reading, Painting, Singing, Programming</p>
-    </section>
-  </main>
-</div>
-
+  </div>
 </body>
 </html>
