--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-phone"></i>
-              <span>+91 7223089620</span>
+              <a href="tel:+917223089620" class="contact-link">+91 7223089620</a>
             </div>
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
