--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
             </li>
             <li class="skill-item">
               <div class="skill-name">
+                <i class="fab fa-java"></i>
+                <span>Java</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
+                <i class="fas fa-leaf"></i>
+                <span>Spring Boot</span>
+              </div>
+            </li>
+            <li class="skill-item">
+              <div class="skill-name">
                 <i class="fas fa-code"></i>
                 <span>C Programming</span>
               </div>
